plugins {
    id 'java'
    id 'maven-publish'
}

group 'xyz.lawlietbot'
version '1.0-SNAPSHOT'
sourceCompatibility = 8
targetCompatibility = 8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.json:json:20210307'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
}

test {
    useJUnitPlatform()
}